# ic402

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  eslint.config.mjs  icp.yaml  mops.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: ci.yml
.icp/: ckusdc-ledger-init.candid  evm-rpc-init.candid
contracts/: foundry.toml
contracts/src/: IdentityRegistry.sol
contracts/test/: IdentityRegistry.t.sol
deploy/: deploy.sh
docs/: SPEC.md
example/: example.did  main.mo
example/client/: package.json
example/zk-verifier/: Cargo.toml  README.md  zk_verifier.did
example/zk-verifier/examples/: gen_fixtures.rs
example/zk-verifier/src/: lib.rs
integration/mcp/: package.json
integration/mcp-client/: package.json  tsconfig.json
integration/src/: index.ts
integrations/mcp/: package.json
python/: .env.example  README.md  gradio_mcp.py  pyproject.toml
python/agentflow/: __init__.py  client.py  exceptions.py  types.py  voucher.py
python/examples/: demo.py  streamlit_demo.py
python/ic402/: __init__.py  client.py  exceptions.py  types.py  voucher.py
python/mcp_server/: __init__.py  server.py
scripts/: fetch-prebuilt.sh  gen-did.sh  gen-mops-identity.js  local-start.sh  patch-local.sh  predemo.sh  register-agent.ts  setup.sh  version.sh
src/agentflow/: Gateway.mo  Policy.mo  Types.mo  lib.mo
src/example/: example.did  main.mo
src/ic402/: ContentStore.mo  Eip712.mo  Escrow.mo  EvmAddress.mo  EvmEscrow.mo  EvmRpc.mo  EvmSender.mo  EvmSigner.mo  EvmUtils.mo  EvmVerify.mo  Gateway.mo  Grants.mo  (+10 more)
test/: contentstore.test.mo  eip712.test.mo  escrow.test.mo  evmaddress.test.mo  evmutils.test.mo  evmverify.test.mo  grant.test.mo  helpers.ts  httphandler.test.mo  integration.test.ts  nonce.test.mo  policy.test.mo  serviceregistry.test.mo  sessions.test.mo  utils.test.mo
(+10 files in other folders)
