[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ic402"
version = "0.1.0"
description = "Python SDK and MCP server for ic402 — autonomous payments for ICP canisters"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "ic-py>=1.0.1",
    "cryptography>=42.0.0",
    "cbor2>=5.6.0",
    "mcp[cli]>=1.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
ic402-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ic402", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
